<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TrackerFragment"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/home"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_add_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracker"
        app:layout_constraintTop_toBottomOf="@id/llBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/llBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvStatus"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtTracker"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvLocation"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtTracker"
        app:layout_constraintStart_toEndOf="@id/cvStatus">

        <Spinner
            android:id="@+id/spinnerLocation"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/cvLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/cv_tracker_fixsize">

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/black"
                    android:text="@string/heading_cv_tracker"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:text="@string/last_location"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:text="@string/last_place"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:text="@string/battery"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:text="@string/last_update"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:text="@string/status"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="20dp"
                android:src="@drawable/baseline_chevron_right_24"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>